--- a/csharpcore-Verify.xunit/GildedRoseTests/GildedRoseTests.csproj
+++ b/csharpcore-Verify.xunit/GildedRoseTests/GildedRoseTests.csproj
@@ -5,6 +5,7 @@
         <IsPackable>false</IsPackable>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
         <PackageReference Include="Verify.Xunit" Version="14.11.4" />
         <PackageReference Include="xunit" Version="2.4.1" />
